# SolidPython

./: .gitignore  .gitmodules  README.rst  prebuild.py  pyproject.toml
Doc/: conf.py  index.rst
solid/: __init__.py  builtins.openscad  builtins.py  code_generation.py  config.py  convenience.py  helpers.py  object_base.py  objects.py  open_scad_builtins.py  open_scad_import.py  open_scad_object.py  open_scad_render.py  scad_code_generation.py  scad_import.py  scad_render.py  solidpython.py  utilityFunctions.py  utils.py
solid/core/: __init__.py  builtin_primitives.py  builtins.implicit  builtins.py  extension_base.py  extension_manager.py  helpers.py  object_base.py  parse_scad.py  scad_code_generation.py  scad_import.py  scad_render.py  utils.py
solid/examples/: 01-basics.py  02-functions.py  02-vars-and-operators.py  03-debug-background.py  04-convenience.py  05-access-style-syntax.py  06-functions.py  07-libs-bosl2-attachable.py  07-libs-bosl2.py  07-libs.py  08-extensions.py  09-code-attach-extension.py  10-customizer.py  11-fonts.py  12-animation.py  13-animated-bouncing-ball.py  14-implicitCAD.py  15-implicitCAD2.py  16-mazebox-bosl2.py  17-greedy-scad-interface.py  basic_builtins.py  bom_scad.py  convenience_example.py  hole_example.py  libs_example.py  run_all_examples.py  xx_legacy_bill_of_materials_example.py  xx_legacy_compatibility.py  xx_legacy_hole_example.py
solid/exp_extensions/: bill_of_materials.py  convenience.py  extension_base.py  repr_png.py  solid_functions.py
solid/extensions/: __init__.py  access_syntax.py  bosl2.py  convenience.py  customizer.py  extension_base.py  extrude_along_path.py  modifiers.py  operators.py  scad_interface.py  screw_thread.py  splines.py  utils.py
solid/py_scadparser/: parsetab.py  scad_parser.py
solid/test/: test_solidpython.py
solid/utils/: __init__.py  extrude_along_path.py  screw_thread.py  splines.py  utils.py
solid2/: __init__.py  config.py
solid2/core/: __init__.py  accessSyntaxBase.py  builtin_primitives.py  builtins.py  extension_manager.py  functions.py  object_base.py  object_factory.py  operatorBase.py  parse_scad.py  scad_import.py  scad_render.py  utils.py
solid2/examples/: 01-basics.py  02-vars-and-operators.py  03-debug-background.py  04-convenience.py  05-access-style-syntax.py  06-functions.py  07-libs-bosl2-attachable.py  07-libs-bosl2-logo.py  07-libs-bosl2.py  07-libs.x.py  08-extensions.py  09-code-attach-extension.py  10-customizer.py  11-fonts.py  11-fonts.x.py  12-animation.py  14-implicitCAD.py  (+7 more)
test/: examples_test.py
tests/: examples_test.py  run_tests.py
(+199 files in other folders)
