[tool.poetry]
name = "solidpython2"
version = "2.0.0-beta-01"
description = "Python interface to the OpenSCAD declarative geometry language"
authors = ["jeff"]
homepage = "https://github.com/jeff-dh/SolidPython"
repository = "https://github.com/jeff-dh/SolidPython"
license = "LGPL-2.1"
readme = "README.rst"
keywords = [
    "3D", 
    "CAD", 
    "CSG", 
    "constructive solid geometry",
    "geometry",
    "modeling", 
    "OpenSCAD", 
]

classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Mathematics",
]
packages=[
    { include = "solid2"}
]

[tool.poetry.dependencies]
python = ">=3.7"
ply = "^3.11"

[build-system]
requires = [
    "poetry>=0.12",
    # See https://github.com/pypa/setuptools/issues/2353#issuecomment-683781498
    # for the rest of these requirements, 
    # -ETJ 31 December 2020
    "setuptools>=30.3.0,<50",
    "wheel",
    "pytest-runner",
    "setuptools_scm>=3.3.1",

]

build-backend = "poetry.masonry.api"

