[tool.poetry]
name = "solidpython2"
version = "2.0.3"
description = "Python interface to the OpenSCAD declarative geometry language"
authors = ["jeff"]
homepage = "https://github.com/jeff-dh/SolidPython"
repository = "https://github.com/jeff-dh/SolidPython"
license = "LGPL-2.1"
readme = "README.rst"
keywords = [
    "3D",
    "CAD",
    "CSG",
    "constructive solid geometry",
    "geometry",
    "modeling",
    "OpenSCAD",
]

classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Mathematics",
]
packages=[
    { include = "solid2"}
]

[tool.poetry.dependencies]
python = ">=3.7"
ply = "^3.11"
setuptools = ">=65.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
